added skeleton for continuous play; missing save/load functionality